# dabblefish-solutions.github.io

./: .gitignore  CLAUDE.md  CNAME  Gemfile  _config.yml  ai-enablement.html  index.html
.claude/commands/: update-posts.md
.cursor/rules/: update_posts.mdc
.github/: requirements.txt
.github/workflows/: contact-form.yml  update-posts.yml
_data/: posts.yml  series.yml  services.yml
_includes/: contact-form.html  footer.html  icon.html  navigation.html  service-card.html
_layouts/: default.html
_site/: README.md  ai-enablement.html  feed.xml  index.html
_site/scripts/: update_posts.py
_site/thoughts/: index.html
_site/works/: index.html
assets/css/: styles.css
pages/: ai-enablement.html
posts/: index.html
projects/: index.html
projects/5minuteainews_new_site/: app.js  brand.css  data.js  index.html  styles.css
projects/gemini-images/: index.html
projects/ggutters/: latest.json  main.html
projects/model_behavior_1/: MAINTAINING.md  app.js  episodes.html  index.html  sponsor.html  styles.css
projects/open_source_archive/: index.html  the-open-source-archive-vision.md
projects/public_domain_archive/: index.html  pyproject.toml
projects/public_domain_archive/scripts/: update_public_domain_list.py
services/: index.html  n8n.html
templates/: base.html
thoughts/: index.html
works/: ai.html  data.html  index.html
workshops/: index.html
workshops/general_000_ai_upskilling_intro/: index.html
workshops/general_001_model_types/: index.html
workshops/general_001_speaking_with_ai/: index.html  practice_scenarios.html  (+1 more)
(+10 files in other folders)
