[project]
name = "public-domain-updater"
version = "0.1.0"
description = "Quarterly update script for the Public Domain Archive"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
]

[project.scripts]
update = "scripts.update:main"
